# django

Lesson #1/: items_views.py  main.py  pyproject.toml
Lesson #1/users/: crud.py  views.py
cv/: db.sqlite3
cv/core/: forms.py  models.py  views.py
cv/core/migrations/: 0001_initial.py  0002_cv.py
cv/core/templates/: basic_contact.html  cv_detail.html  cv_form.html  cv_list.html  success.html
cv/main/: settings.py  urls.py
miniproject/: CONTEXT.md  README.md  db.sqlite3
miniproject/analytics/: admin.py  models.py  serializers.py  urls.py  views.py
miniproject/analytics/migrations/: 0001_initial.py  0002_initial.py
miniproject/notifications/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
miniproject/notifications/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py
miniproject/products/: admin.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
miniproject/sales/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
miniproject/sales_and_trading/: settings.py  urls.py
miniproject/templates/: analytics.html  base.html  base_email.html  create_order.html  create_trading_order.html  list_trading_orders.html  order_detail.html  order_list.html  trading_order_detail.html
miniproject/trading/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
miniproject/users/: admin.py  email_verification.py  models.py  serializers.py  urls.py  views.py
miniproject/utils/: pdf_utils.py
(+12 files in other folders)
